--- a/index.html
+++ b/index.html
@@ -281,6 +281,19 @@
             color: var(--accent);
         }
 
+        .map-instruction {
+            margin: clamp(1rem, 2vw, 1.5rem) auto 0;
+            max-width: 720px;
+            padding: 0.75rem 1.25rem;
+            border-radius: 0.85rem;
+            background: rgba(0, 92, 187, 0.08);
+            color: var(--accent);
+            font-size: 0.95rem;
+            font-weight: 600;
+            text-align: center;
+            box-shadow: inset 0 0 0 1px rgba(0, 92, 187, 0.15);
+        }
+
         .badge {
             display: inline-flex;
             align-items: center;
@@ -361,6 +374,11 @@
 
             .status-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .map-instruction {
+                font-size: 0.85rem;
+                padding: 0.65rem 1rem;
             }
         }
 
@@ -641,6 +659,7 @@
                         </div>
                     </div>
                 </div>
+        <p class="map-instruction" role="note">Please make sure you have internet connectivity and your location services are enabled.</p>
             </section>
         </main>
         <div class="modal-backdrop" id="statusModal" aria-hidden="true">
