made some changes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             font-size: inherit;
         }
 
+        .brand-tagline {
+            margin: 0;
+            font-size: 1rem;
+            font-weight: 500;
+            color: var(--muted);
+            letter-spacing: 0.01em;
+        }
+
         .brand-subheading {
             display: flex;
             flex-direction: column;
@@ -358,6 +366,7 @@
 
             main {
                 padding: clamp(0.75rem, 5vw, 1.25rem);
+                padding-bottom: calc(6rem + env(safe-area-inset-bottom, 0px));
             }
 
             .map-header {
@@ -379,6 +388,45 @@
             .map-instruction {
                 font-size: 0.85rem;
                 padding: 0.65rem 1rem;
+            }
+
+            .brand {
+                gap: 0.65rem;
+            }
+
+            .brand-tagline {
+                font-size: 0.95rem;
+                line-height: 1.4;
+            }
+
+            .hero-action {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .map-wrapper {
+                min-height: clamp(360px, 70dvh, 760px);
+                border-radius: 1rem;
+            }
+
+            .map-body {
+                min-height: 360px;
+            }
+
+            .mobile-toolbar {
+                display: flex;
+            }
+
+            .mobile-support {
+                display: grid;
+            }
+
+            footer {
+                padding-bottom: calc(1.5rem + env(safe-area-inset-bottom, 0px));
+                padding-top: 1.25rem;
+                gap: 0.5rem;
+                flex-direction: column;
+                align-items: flex-start;
             }
         }
 
@@ -670,6 +718,91 @@
             box-shadow: none;
             transform: none;
         }
+
+        .map-instruction.is-active {
+            background: rgba(16, 185, 129, 0.15);
+            color: #047857;
+        }
+
+        .map-instruction.is-error {
+            background: rgba(239, 68, 68, 0.15);
+            color: #b91c1c;
+        }
+
+        .mobile-toolbar {
+            position: fixed;
+            bottom: 1.25rem;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem;
+            border-radius: 999px;
+            background: rgba(15, 23, 42, 0.92);
+            box-shadow: var(--shadow);
+            z-index: 850;
+        }
+
+        .mobile-toolbar__btn {
+            appearance: none;
+            border: 1px solid rgba(248, 250, 252, 0.25);
+            background: transparent;
+            color: #f8fafc;
+            font-weight: 600;
+            font-size: 0.9rem;
+            padding: 0.55rem 1.05rem;
+            border-radius: 999px;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+        }
+
+        .mobile-toolbar__btn:hover,
+        .mobile-toolbar__btn:focus-visible {
+            transform: translateY(-1px);
+            box-shadow: var(--shadow);
+            outline: none;
+        }
+
+        .mobile-toolbar__btn--primary {
+            background: var(--accent);
+            border-color: transparent;
+            color: #ffffff;
+            box-shadow: 0 12px 30px rgba(0, 92, 187, 0.3);
+        }
+
+        .mobile-support {
+            display: none;
+            margin-top: 1.5rem;
+            gap: 1rem;
+        }
+
+        .mobile-card {
+            background: var(--surface);
+            border-radius: 1rem;
+            padding: 1.1rem 1.25rem;
+            box-shadow: var(--shadow);
+            display: grid;
+            gap: 0.4rem;
+        }
+
+        .mobile-card h2 {
+            margin: 0;
+            font-size: 1.05rem;
+            color: var(--text);
+        }
+
+        .mobile-card p {
+            margin: 0;
+            font-size: 0.95rem;
+            color: var(--muted);
+        }
+
+        @supports (padding: env(safe-area-inset-bottom)) {
+            .mobile-toolbar {
+                padding-bottom: calc(0.5rem + env(safe-area-inset-bottom));
+            }
+        }
         </style>
         <title></title>
     </head>
@@ -678,6 +811,7 @@
             <div class="brand">
             
                 <span class="brand-title">TagMe</span>
+                <p class="brand-tagline">Community check-ins that keep responders informed in real time.</p>
                 
                 <button class="hero-action ghost" type="button" id="openStatusModal">Report my Status</button>
             </div>
@@ -694,9 +828,27 @@
                         </div>
                     </div>
                 </div>
-        <p class="map-instruction" role="note">Please make sure you have internet connectivity and your location services are enabled.</p>
+                <p class="map-instruction" role="note">Please make sure you have internet connectivity and your location services are enabled.</p>
+                <div class="mobile-support" aria-label="Mobile quick guidance">
+                    <article class="mobile-card">
+                        <h2>Check in fast</h2>
+                        <p>Use the quick actions below to share your status and let responders know where you are.</p>
+                    </article>
+                    <article class="mobile-card">
+                        <h2>Stay visible</h2>
+                        <p>Keep the map open after reporting so responders can track updates in the area.</p>
+                    </article>
+                    <article class="mobile-card">
+                        <h2>Share updates</h2>
+                        <p>Encourage neighbors to report their status—more check-ins help coordinate support.</p>
+                    </article>
+                </div>
             </section>
         </main>
+        <div class="mobile-toolbar" role="group" aria-label="Mobile quick actions">
+            <button type="button" class="mobile-toolbar__btn" id="mobileLocateBtn">Locate me</button>
+            <button type="button" class="mobile-toolbar__btn mobile-toolbar__btn--primary" id="mobileReportBtn">Report status</button>
+        </div>
         <div class="modal-backdrop" id="statusModal" aria-hidden="true">
             <div class="modal" role="dialog" aria-modal="true" aria-labelledby="statusModalTitle" aria-describedby="statusModalDescription">
                 <header>
@@ -794,17 +946,18 @@
 
             function persistReportEntry(entry) {
                 if (!entry) {
-                    return;
+                    return false;
                 }
                 const reports = readStoredReports();
                 if (entry.timestamp && reports.some(function (item) { return item.timestamp === entry.timestamp; })) {
-                    return;
+                    return false;
                 }
                 reports.push(entry);
                 if (reports.length > 250) {
                     reports.splice(0, reports.length - 250);
                 }
                 writeStoredReports(reports);
+                return true;
             }
 
             function formatTimestamp(value) {
@@ -860,7 +1013,12 @@
             const detectLocationBtn = document.getElementById("detectLocationBtn");
             const DEFAULT_GEO_PROMPT = "We'll try to detect your location automatically. Tap \"Use my current location\" if it takes longer than a few seconds.";
             const GEO_PERMISSION_STATE_KEY = "tagme-geo-permission-state";
+            const mobileReportBtn = document.getElementById("mobileReportBtn");
+            const mobileLocateBtn = document.getElementById("mobileLocateBtn");
+            const mapInstructionEl = document.querySelector(".map-instruction");
+            const mapInstructionDefault = mapInstructionEl ? mapInstructionEl.textContent : "";
             let geoRequestInFlight = false;
+            let mapInstructionTimer = null;
             const statusSource = new ol.source.Vector();
             const STATUS_STYLES = {
                 "safe": {
@@ -1009,6 +1167,34 @@
                 feedbackEl.style.color = isError ? "#b91c1c" : "var(--accent)";
             }
 
+            function updateMapInstruction(message, state, duration) {
+                if (!mapInstructionEl) {
+                    return;
+                }
+                if (mapInstructionTimer) {
+                    window.clearTimeout(mapInstructionTimer);
+                    mapInstructionTimer = null;
+                }
+                mapInstructionEl.classList.remove("is-active", "is-error");
+                if (typeof message === "string" && message.length) {
+                    mapInstructionEl.textContent = message;
+                } else {
+                    mapInstructionEl.textContent = mapInstructionDefault;
+                }
+                if (state === "active") {
+                    mapInstructionEl.classList.add("is-active");
+                } else if (state === "error") {
+                    mapInstructionEl.classList.add("is-error");
+                }
+                if (typeof duration === "number") {
+                    mapInstructionTimer = window.setTimeout(function () {
+                        mapInstructionEl.classList.remove("is-active", "is-error");
+                        mapInstructionEl.textContent = mapInstructionDefault;
+                        mapInstructionTimer = null;
+                    }, duration);
+                }
+            }
+
             function rememberGeoPermissionState(state) {
                 if (!("localStorage" in window)) {
                     return;
@@ -1115,6 +1301,49 @@
                 }
                 const storedState = readGeoPermissionState();
                 return storedState !== "denied";
+            }
+
+            function flyToCurrentLocation() {
+                if (!navigator.geolocation) {
+                    updateMapInstruction("Your device can't share location. Drag the map to navigate manually.", "error", 5000);
+                    return;
+                }
+
+                updateMapInstruction("Trying to locate you…", "active");
+
+                navigator.geolocation.getCurrentPosition(
+                    function (position) {
+                        const currentLon = position.coords.longitude;
+                        const currentLat = position.coords.latitude;
+
+                        if (window.map && typeof window.map.getView === "function") {
+                            const currentView = window.map.getView();
+                            const coordinate = ol.proj.fromLonLat([currentLon, currentLat]);
+                            const currentZoom = currentView.getZoom() || 12;
+                            currentView.animate({
+                                center: coordinate,
+                                zoom: Math.max(currentZoom, 16),
+                                duration: 800
+                            });
+                        }
+
+                        updateMapInstruction("Centered on your current location.", "active", 4000);
+                    },
+                    function (error) {
+                        const code = error && typeof error.code === "number" ? error.code : 0;
+                        const messages = {
+                            1: "Turn on location access in your device or browser settings to center the map.",
+                            2: "We couldn't determine your position. Move to an open area and try again.",
+                            3: "Location request timed out. Give it another try in a moment."
+                        };
+                        updateMapInstruction(messages[code] || "We couldn't retrieve your location.", "error", 5000);
+                    },
+                    {
+                        enableHighAccuracy: true,
+                        timeout: 12000,
+                        maximumAge: 45000
+                    }
+                );
             }
 
             function toggleModal(show) {
@@ -1277,6 +1506,10 @@
             }
 
             reportBtn && reportBtn.addEventListener("click", openModal);
+            mobileReportBtn && mobileReportBtn.addEventListener("click", openModal);
+            mobileLocateBtn && mobileLocateBtn.addEventListener("click", function () {
+                flyToCurrentLocation();
+            });
             detectLocationBtn && detectLocationBtn.addEventListener("click", function () {
                 setFeedback("");
                 requestGeolocation({ source: "manual" });
